force-app/main/default/objects/CHCCredentials__mdt/CHCCredentials__mdt.object-meta.xml
<CustomObject>
    <description>We don&apos;t use this anymore to store the CHC credentials</description>
    <label>ChcCredential - STALE</label>
    <pluralLabel>ChcCredentials</pluralLabel>
</CustomObject>