force-app/main/default/objects/CHCCredentials__mdt/fields/Facility_ObjId__c.field-meta.xml
<CustomField>
    <fullName>Facility_ObjId__c</fullName>
    <label>Facility ObjId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>