force-app/main/default/objects/CHCCredentials__mdt/fields/From_created_date__c.field-meta.xml
<CustomField>
    <fullName>From_created_date__c</fullName>
    <label>From created date</label>
    <type>Date</type>
</CustomField>