force-app/main/default/objects/CHCCredentials__mdt/fields/Number_of_Tests_at_a_time__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tests_at_a_time__c</fullName>
    <label>Number of Tests at a time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>