force-app/main/default/objects/CHCCredentials__mdt/fields/To_created_date__c.field-meta.xml
<CustomField>
    <fullName>To_created_date__c</fullName>
    <label>To created date</label>
    <type>Date</type>
</CustomField>