force-app/main/default/objects/CHCCredentials__mdt/fields/XMLCHC_Payload__c.field-meta.xml
<CustomField>
    <fullName>XMLCHC_Payload__c</fullName>
    <label>XMLCHC_Payload</label>
    <length>255</length>
    <type>Text</type>
</CustomField>